imgui-sys2/src/exp_bindings.rs

extern "C" {
    pub fn ImGui_InputFloat4Ex(
        label: *const cty::c_char,
        v: *mut f32,
        format: *const cty::c_char,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputInt(label: *const cty::c_char, v: *mut cty::c_int) -> bool;
}
extern "C" {
    pub fn ImGui_InputIntEx(
        label: *const cty::c_char,
        v: *mut cty::c_int,
        step: cty::c_int,
        step_fast: cty::c_int,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputInt2(
        label: *const cty::c_char,
        v: *mut cty::c_int,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputInt3(
        label: *const cty::c_char,
        v: *mut cty::c_int,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputInt4(
        label: *const cty::c_char,
        v: *mut cty::c_int,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputDouble(label: *const cty::c_char, v: *mut f64) -> bool;
}
extern "C" {
    pub fn ImGui_InputDoubleEx(
        label: *const cty::c_char,
        v: *mut f64,
        step: f64,
        step_fast: f64,
        format: *const cty::c_char,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputScalar(
        label: *const cty::c_char,
        data_type: ImGuiDataType,
        p_data: *mut cty::c_void,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputScalarEx(
        label: *const cty::c_char,
        data_type: ImGuiDataType,
        p_data: *mut cty::c_void,
        p_step: *const cty::c_void,
        p_step_fast: *const cty::c_void,
        format: *const cty::c_char,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputScalarN(
        label: *const cty::c_char,
        data_type: ImGuiDataType,
        p_data: *mut cty::c_void,
        components: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_InputScalarNEx(
        label: *const cty::c_char,
        data_type: ImGuiDataType,
        p_data: *mut cty::c_void,
        components: cty::c_int,
        p_step: *const cty::c_void,
        p_step_fast: *const cty::c_void,
        format: *const cty::c_char,
        flags: ImGuiInputTextFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorEdit3(
        label: *const cty::c_char,
        col: *mut f32,
        flags: ImGuiColorEditFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorEdit4(
        label: *const cty::c_char,
        col: *mut f32,
        flags: ImGuiColorEditFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorPicker3(
        label: *const cty::c_char,
        col: *mut f32,
        flags: ImGuiColorEditFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorPicker4(
        label: *const cty::c_char,
        col: *mut f32,
        flags: ImGuiColorEditFlags,
        ref_col: *const f32,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorButton(
        desc_id: *const cty::c_char,
        col: ImVec4,
        flags: ImGuiColorEditFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ColorButtonEx(
        desc_id: *const cty::c_char,
        col: ImVec4,
        flags: ImGuiColorEditFlags,
        size: ImVec2,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_SetColorEditOptions(flags: ImGuiColorEditFlags);
}
extern "C" {
    pub fn ImGui_TreeNode(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_TreeNodeV(
        str_id: *const cty::c_char,
        fmt: *const cty::c_char,
        args: va_list,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_TreeNodeVPtr(
        ptr_id: *const cty::c_void,
        fmt: *const cty::c_char,
        args: va_list,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_TreeNodeEx(label: *const cty::c_char, flags: ImGuiTreeNodeFlags) -> bool;
}
extern "C" {
    pub fn ImGui_TreeNodeExV(
        str_id: *const cty::c_char,
        flags: ImGuiTreeNodeFlags,
        fmt: *const cty::c_char,
        args: va_list,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_TreeNodeExVPtr(
        ptr_id: *const cty::c_void,
        flags: ImGuiTreeNodeFlags,
        fmt: *const cty::c_char,
        args: va_list,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_TreePush(str_id: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_TreePushPtr(ptr_id: *const cty::c_void);
}
extern "C" {
    pub fn ImGui_TreePop();
}
extern "C" {
    pub fn ImGui_GetTreeNodeToLabelSpacing() -> f32;
}
extern "C" {
    pub fn ImGui_CollapsingHeader(label: *const cty::c_char, flags: ImGuiTreeNodeFlags) -> bool;
}
extern "C" {
    pub fn ImGui_CollapsingHeaderBoolPtr(
        label: *const cty::c_char,
        p_visible: *mut bool,
        flags: ImGuiTreeNodeFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_SetNextItemOpen(is_open: bool, cond: ImGuiCond);
}
extern "C" {
    pub fn ImGui_Selectable(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_SelectableEx(
        label: *const cty::c_char,
        selected: bool,
        flags: ImGuiSelectableFlags,
        size: ImVec2,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_SelectableBoolPtr(
        label: *const cty::c_char,
        p_selected: *mut bool,
        flags: ImGuiSelectableFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_SelectableBoolPtrEx(
        label: *const cty::c_char,
        p_selected: *mut bool,
        flags: ImGuiSelectableFlags,
        size: ImVec2,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_BeginListBox(label: *const cty::c_char, size: ImVec2) -> bool;
}
extern "C" {
    pub fn ImGui_EndListBox();
}
extern "C" {
    pub fn ImGui_ListBox(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items: *const *const cty::c_char,
        items_count: cty::c_int,
        height_in_items: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ListBoxCallback(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_getter: ::core::option::Option<
            unsafe extern "C" fn(
                data: *mut cty::c_void,
                idx: cty::c_int,
                out_text: *mut *const cty::c_char,
            ) -> bool,
        >,
        data: *mut cty::c_void,
        items_count: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ListBoxCallbackEx(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_getter: ::core::option::Option<
            unsafe extern "C" fn(
                data: *mut cty::c_void,
                idx: cty::c_int,
                out_text: *mut *const cty::c_char,
            ) -> bool,
        >,
        data: *mut cty::c_void,
        items_count: cty::c_int,
        height_in_items: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_PlotLines(label: *const cty::c_char, values: *const f32, values_count: cty::c_int);
}
extern "C" {
    pub fn ImGui_PlotLinesEx(
        label: *const cty::c_char,
        values: *const f32,
        values_count: cty::c_int,
        values_offset: cty::c_int,
        overlay_text: *const cty::c_char,
        scale_min: f32,
        scale_max: f32,
        graph_size: ImVec2,
        stride: cty::c_int,
    );
}
extern "C" {
    pub fn ImGui_PlotLinesCallback(
        label: *const cty::c_char,
        values_getter: ::core::option::Option<
            unsafe extern "C" fn(data: *mut cty::c_void, idx: cty::c_int) -> f32,
        >,
        data: *mut cty::c_void,
        values_count: cty::c_int,
    );
}
extern "C" {
    pub fn ImGui_PlotLinesCallbackEx(
        label: *const cty::c_char,
        values_getter: ::core::option::Option<
            unsafe extern "C" fn(data: *mut cty::c_void, idx: cty::c_int) -> f32,
        >,
        data: *mut cty::c_void,
        values_count: cty::c_int,
        values_offset: cty::c_int,
        overlay_text: *const cty::c_char,
        scale_min: f32,
        scale_max: f32,
        graph_size: ImVec2,
    );
}
extern "C" {
    pub fn ImGui_PlotHistogram(
        label: *const cty::c_char,
        values: *const f32,
        values_count: cty::c_int,
    );
}
extern "C" {
    pub fn ImGui_PlotHistogramEx(
        label: *const cty::c_char,
        values: *const f32,
        values_count: cty::c_int,
        values_offset: cty::c_int,
        overlay_text: *const cty::c_char,
        scale_min: f32,
        scale_max: f32,
        graph_size: ImVec2,
        stride: cty::c_int,
    );
}
extern "C" {
    pub fn ImGui_PlotHistogramCallback(
        label: *const cty::c_char,
        values_getter: ::core::option::Option<
            unsafe extern "C" fn(data: *mut cty::c_void, idx: cty::c_int) -> f32,
        >,
        data: *mut cty::c_void,
        values_count: cty::c_int,
    );
}
extern "C" {
    pub fn ImGui_PlotHistogramCallbackEx(
        label: *const cty::c_char,
        values_getter: ::core::option::Option<
            unsafe extern "C" fn(data: *mut cty::c_void, idx: cty::c_int) -> f32,
        >,
        data: *mut cty::c_void,
        values_count: cty::c_int,
        values_offset: cty::c_int,
        overlay_text: *const cty::c_char,
        scale_min: f32,
        scale_max: f32,
        graph_size: ImVec2,
    );
}
extern "C" {
    pub fn ImGui_BeginMenuBar() -> bool;
}
extern "C" {
    pub fn ImGui_EndMenuBar();
}
extern "C" {
    pub fn ImGui_BeginMainMenuBar() -> bool;
}
extern "C" {
    pub fn ImGui_EndMainMenuBar();
}
extern "C" {
    pub fn ImGui_BeginMenu(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_BeginMenuEx(label: *const cty::c_char, enabled: bool) -> bool;
}
extern "C" {
    pub fn ImGui_EndMenu();
}
extern "C" {
    pub fn ImGui_MenuItem(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_MenuItemEx(
        label: *const cty::c_char,
        shortcut: *const cty::c_char,
        selected: bool,
        enabled: bool,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_MenuItemBoolPtr(
        label: *const cty::c_char,
        shortcut: *const cty::c_char,
        p_selected: *mut bool,
        enabled: bool,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_BeginTooltip() -> bool;
}
extern "C" {
    pub fn ImGui_EndTooltip();
}
extern "C" {
    pub fn ImGui_SetTooltipV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_BeginItemTooltip() -> bool;
}
extern "C" {
    pub fn ImGui_SetItemTooltipV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_BeginPopup(str_id: *const cty::c_char, flags: ImGuiWindowFlags) -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupModal(
        name: *const cty::c_char,
        p_open: *mut bool,
        flags: ImGuiWindowFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_EndPopup();
}
extern "C" {
    pub fn ImGui_OpenPopup(str_id: *const cty::c_char, popup_flags: ImGuiPopupFlags);
}
extern "C" {
    pub fn ImGui_OpenPopupID(id: ImGuiID, popup_flags: ImGuiPopupFlags);
}
extern "C" {
    pub fn ImGui_OpenPopupOnItemClick(str_id: *const cty::c_char, popup_flags: ImGuiPopupFlags);
}
extern "C" {
    pub fn ImGui_CloseCurrentPopup();
}
extern "C" {
    pub fn ImGui_BeginPopupContextItem() -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupContextItemEx(
        str_id: *const cty::c_char,
        popup_flags: ImGuiPopupFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupContextWindow() -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupContextWindowEx(
        str_id: *const cty::c_char,
        popup_flags: ImGuiPopupFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupContextVoid() -> bool;
}
extern "C" {
    pub fn ImGui_BeginPopupContextVoidEx(
        str_id: *const cty::c_char,
        popup_flags: ImGuiPopupFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_IsPopupOpen(str_id: *const cty::c_char, flags: ImGuiPopupFlags) -> bool;
}
extern "C" {
    pub fn ImGui_BeginTable(
        str_id: *const cty::c_char,
        column: cty::c_int,
        flags: ImGuiTableFlags,
    ) -> bool;
}
